--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                 <input type="email" name="mail" placeholder="E-mail" class="newsletter-subscription-form-input" id="mail"/>
                 <button type="submit" class="newsletter-subscription-form-btn">Подписаться
                 <svg class="newsletter-subscription-form-btn-icon" width="24px" height="24px">
-                    <use href="/images/icon/icons.svg#icon-send"></use>
+                    <use href="./images/icon/icons.svg#icon-send"></use>
                 </svg>
                 </button>        
             </form>
@@ -477,7 +477,7 @@
               <div class="modal-input-container">
                 <input type="text" name="user-name" class="modal-input" minlength="2" required>
                 <svg class="icon-modal-form" width="18px" heignt="18px">
-                    <use href="/images/icon/icons.svg#icon-person-black"></use>
+                    <use href="./images/icon/icons.svg#icon-person-black"></use>
                 </svg>
               </div>             
             </label>
@@ -486,7 +486,7 @@
               <div class="modal-input-container">
                 <input type="tel" name="user-phone-number" class="modal-input" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx" required>
                 <svg class="icon-modal-form" width="18px" heignt="18px">
-                    <use href="/images/icon/icons.svg#icon-phone-black"></use>
+                    <use href="./images/icon/icons.svg#icon-phone-black"></use>
                 </svg>
               </div>             
             </label>
@@ -495,7 +495,7 @@
               <div class="modal-input-container">
                 <input type="email" name="user-email" class="modal-input" required>
                 <svg class="icon-modal-form" width="18px" heignt="18px">
-                    <use href="/images/icon/icons.svg#icon-email-black"></use>
+                    <use href="./images/icon/icons.svg#icon-email-black"></use>
                 </svg>
               </div>              
             </label>
