--- a/portfolio.html
+++ b/portfolio.html
@@ -328,6 +328,25 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form-container">
+          <b class="newsletter-subscription-form-title">подпишись на рассылку</b>
+          <form name="newsletter-subscription-form" class="newsletter-subscription-form">
+            <label for="mail" class="newsletter-subscription-form-label">E-mail</label>
+            <input
+              type="email"
+              name="mail"
+              placeholder="E-mail"
+              class="newsletter-subscription-form-input"
+              id="mail"
+            />
+            <button type="submit" class="newsletter-subscription-form-btn">
+              Подписаться
+              <svg class="newsletter-subscription-form-btn-icon" width="24px" height="24px">
+                <use href="./images/icon/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
